crates/rattler_build_recipe/src/stage0/parser/snapshots/rattler_build_recipe__stage0__parser__error_tests__error_invalid_jinja.snap
---
source: crates/rattler_build_recipe/src/stage0/parser/error_tests.rs
expression: format_miette_report(error_with_source)
---
  × Jinja template error: Jinja error: Failed to parse Jinja template: syntax error: unexpected `}`, expected `,` (in template:1)
   ╭─[invalid_jinja.yaml:2:9]
 1 │ package:
 2 │   name: '${{ name | invalid_filter(unclosed }}'
   ·         ──┬─
   ·           ╰── Jinja error: Failed to parse Jinja template: syntax error: unexpected `}`, expected `,` (in template:1)
 3 │   version: 1.0.0
   ╰────
